@@ -1,3 +1,7 @@
+FEB 4 2021
+	Rearranged foodIds so that cake slices get aten before whole cakes.
+	getBankItemCount() works again.
+	
 FEB 2 2021
 	You can now run scripts from the command line! If it cannot find the script, it will immediately terminate and return 1.
 	Added dropItem(id, amt) to Controller
